# resampling-and-simulation-methods-for-trading

./: CMakeLists.txt  README.md  conanfile.txt  daily.csv
src/: BootstrapTask.cpp  BootstrapTask.h  CMakeLists.txt  DailyReturnsCsvReader.cpp  DailyReturnsCsvReader.h  bootstrap.cpp  bootstrap.h  financial.cpp  financial.h  main.cpp  stats.cpp  stats.h
test/: CMakeLists.txt  test.cpp  test_bootstrap.cpp  test_financial.cpp
